<resources>
    <string name="app_name">Aevi Donation App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="charity_name_hint">the name of your charity event</string>
    <string name="charity_name_default">Welcome,</string>
    <string name="charity_description_hint">short description of your charity event</string>
    <string name="charity_description_default">to our charity event.\nThank your for donating.</string>
    <string name="charity_default_amount">default amount for the donations, eg: 10€</string>
    <string name="charity_settings_save_button">save</string>

    <string name="donate_activity_button_donate">Donate</string>
    <string name="donate_activity_charity_image_description">Charity image</string>

    <string name="amount_chooser_activity_headline">Your donation</string>
    <string name="amount_chooser_activity_amount_hint">The Amount of your donation; eg. 10€</string>
    <string name="amount_chooser_activity_button_send_donation">send donation</string>

    <string name="success_activity_success_message">Thank You\nfor your donation</string>
    <string name="success_activity_button_finish">Make another donation</string>

    <string name="settings_activity_choose_image_description">Choose an image</string>
    <string name="settings_activity_donate_button_label">Donate Button Icon: </string>
    <string name="settings_activity_charity_logo_label">Charity Logo: </string>

    <string name="error_no_permission">You have not the permission to enter the settings</string>
    <string name="error_can_not_be_empty">Can not be empty</string>
    <string name="error_wrong_default_amount">Can not be empty and must be at least one number over 0</string>

</resources>
