<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/headline"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/charity_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/charity_name_hint"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/charity_description_hint" />

    <EditText
        android:id="@+id/default_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/charity_default_amount" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/charity_settings_password"
        android:ems="10" />

    <EditText
        android:id="@+id/password_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/charity_settings_password_repeat"
        android:ems="10" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charity_settings_save_button"
        android:layout_gravity="center_horizontal" />

</LinearLayout>